# MyEA

./: .gitignore  Copyright.txt  LICENSE  Make_Copyright.sh  MyEA.sln  README.md  VS2017.vssettings  VS2019.vssettings
Common_DLL/: Common_DLL.vcxproj  Common_DLL.vcxproj.filters  ReadMe.txt  dllmain.cpp  stdafx.hpp
Common_Library/: CMakeLists.txt  Common_Library_Linux.vcxproj  Common_Library_Linux.vcxproj.filters  Common_Library_Windows.vcxproj  Common_Library_Windows.vcxproj.filters
Common_Library/include/: framework.hpp  pch.hpp  stdafx.hpp  targetver.hpp
Common_Library/include/Capturing/Keyboard/: Keyboard.hpp
Common_Library/include/Capturing/Keyboard/Linux/: Keyboard.hpp
Common_Library/include/Capturing/Keyboard/Windows/: Keyboard.hpp
Common_Library/include/Capturing/Shutdown/: Shutdown.hpp
Common_Library/include/Capturing/Shutdown/Linux/: Shutdown.hpp
Common_Library/include/Capturing/Shutdown/Windows/: Shutdown.hpp
Common_Library/include/Configuration/: Configuration.hpp  DTypes.hpp  Exports.hpp
Common_Library/include/Enums/: Enum_Type_Activation_Functions.hpp  Enum_Type_Chart.hpp  Enum_Type_Dataset.hpp  Enum_Type_Dataset_File.hpp  Enum_Type_Dataset_Manager_Storage.hpp  Enum_Type_Dataset_Process.hpp  Enum_Type_Device_Synchronized.hpp  Enum_Type_Dialog_Box.hpp  Enum_Type_File_Log.hpp  Enum_Type_Layer.hpp  Enum_Type_Layer_Activation.hpp  Enum_Type_Layer_Dropout.hpp  Enum_Type_Layer_Normalization.hpp  Enum_Type_Loss_Functions.hpp  Enum_Type_Main_Panel.hpp  Enum_Type_Networks.hpp  Enum_Type_Neural_Network_Use.hpp  Enum_Type_Optimizer_Functions.hpp  Enum_Type_RichTextBox.hpp  Enum_Type_State_Propagation.hpp  Enum_Type_String_Format.hpp  Enum_Type_TextBox.hpp  Enum_Type_Weights_Initializers.hpp  Enum_Type_While_Condition.hpp
Common_Library/include/Files/: File.hpp
Common_Library/include/Keyboard_Capturing/Linux/: Keyboard_Capturing.hpp
Common_Library/include/Math/: MODWT.hpp  Math.hpp
Common_Library/include/Math/CPU/: Math.hpp
Common_Library/include/Math/CUDA/: Math.cuh
Common_Library/include/Random/: Base.hpp  Bernoulli.hpp  Floating.hpp  Gaussian.hpp  Integer.hpp  Random.hpp
Common_Library/include/Reallocate/: Reallocate.hpp
Common_Library/include/Reallocate/CPU/: Reallocate.hpp  Reallocate_C.hpp  Reallocate_Cpp.hpp
Common_Library/include/Reallocate/CUDA/: Reallocate.cuh  Reallocate_C.cuh  Reallocate_Cpp.cuh
Common_Library/include/Shutdown_Capturing/Linux/: Shutdown_Capturing.hpp
Common_Library/include/Shutdown_Capturing/Windows/: Shutdown_Capturing.hpp
Common_Library/include/Strings/: Animation_Waiting.hpp  String.hpp
Common_Library/include/Time/: Time.hpp
Common_Library/include/Tools/: CUDA_Fill_1D.cuh  CUDA_Fill_Pointers_1D.cuh  CUDA_Memory_Copy_1D.cuh  CUDA_Memory_Initialize_1D.cuh  CUDA_Zero_1D.cuh  While_Condition.hpp
Common_Library/include/UI/: Dialog_Box.hpp
Common_Library/src/: pch.cpp
Common_Library/src/Capturing/Keyboard/Linux/: Keyboard.cpp
Common_Library/src/Capturing/Keyboard/Windows/: Keyboard.cpp
Common_Library/src/Capturing/Shutdown/Linux/: Shutdown.cpp
Common_Library/src/Capturing/Shutdown/Windows/: Shutdown.cpp
Common_Library/src/Configuration/: Configuration.cpp
Common_Library/src/Configuration/CUDA/: Configuration.cu
Common_Library/src/Configuration/Linux/: Configuration.cpp
Common_Library/src/Configuration/Windows/: Configuration.cpp
Common_Library/src/Files/: File.cpp
Common_Library/src/Files/Linux/: File.cpp
Common_Library/src/Files/Windows/: File.cpp
Common_Library/src/Keyboard_Capturing/Linux/: Keyboard_Capturing.cpp
Common_Library/src/Math/: MODWT.cpp
Common_Library/src/Math/CPU/: Math.cpp
Common_Library/src/Math/CUDA/: Math.cu
Common_Library/src/Random/: Base.cpp  Bernoulli.cpp  Floating.cpp  Gaussian.cpp  Integer.cpp  Random.cpp
Common_Library/src/Random/Adept/: Adept__Random__Double.cpp
Common_Library/src/Reallocate/CPU/: Reallocate.cpp  Reallocate_C.cpp  Reallocate_Cpp.cpp
Common_Library/src/Reallocate/CUDA/: Reallocate.cu  Reallocate_C.cu  Reallocate_Cpp.cu
Common_Library/src/Shutdown_Capturing/Windows/: Shutdown_Capturing.cpp
Common_Library/src/Strings/: Animation_Waiting.cpp  String.cpp
Common_Library/src/Strings/Linux/: String.cpp
Common_Library/src/Strings/Windows/: String.cpp
Common_Library/src/Time/: Time.cpp
Common_Library/src/Time/Linux/: Time.cpp
Common_Library/src/Time/Windows/: Time.cpp
Common_Library/src/Tools/: CUDA_Fill_Pointers_1D.cu  CUDA_Memory_Initialize_1D.cu  CUDA_Zero_1D.cu
Common_Library/src/UI/: Dialog_Box.cpp  Message_Box.cpp
Common_Library/src/UI/Linux/: Dialog_Box.cpp
Common_Library/src/UI/Windows/: Dialog_Box.cpp
Common_Library_Linux/: CMakeLists.txt  Common_Library_Linux.vcxproj  Common_Library_Linux.vcxproj.filters  include  src
Common_Library_Windows/: Common_Library_Windows.vcxproj  Common_Library_Windows.vcxproj.filters  stdafx.hpp
Cpp_Python_RPC/: CMakeLists.txt  Cpp_Python_RPC.vcxproj  Cpp_Python_RPC.vcxproj.filters  README.txt
Cpp_Python_RPC/include/: API.hpp  Python.hpp  framework.hpp  pch.hpp
Cpp_Python_RPC/include/Client/: Client.hpp  Manager.hpp
Cpp_Python_RPC/include/Server/: Manager.hpp
Cpp_Python_RPC/resource/: definition.def
Cpp_Python_RPC/src/: API.cpp  Python.cpp  dllmain.cpp
Cpp_Python_RPC/src/Client/: Client.cpp  Manager.cpp  main.cpp
Cpp_Python_RPC/src/Server/: Manager.cpp  main.cpp
Cpp_With_Python/: Client.cpp  Client.hpp  Cpp_With_Python.cpp  Cpp_With_Python.def  Cpp_With_Python.hpp  Cpp_With_Python.sln  Cpp_With_Python.vcxproj  Cpp_With_Python.vcxproj.filters  INSTALL.txt  dllmain.cpp  framework.hpp  pch.hpp
Form_DLL/: Form_DLL.vcxproj  Form_DLL.vcxproj.filters  stdafx.cpp  stdafx.hpp
Network_DLL/: Network_DLL.vcxproj  Network_DLL.vcxproj.filters  ReadMe.txt
Network_Library_Windows/: Network_Library_Windows.vcxproj  Network_Library_Windows.vcxproj.filters
Neural_Network_DLL/: Neural_Network_DLL.vcxproj  ReadMe.txt  (+2 more)
Neural_Network_Library_Linux/: CMakeLists.txt  Neural_Network_Library_Linux.vcxproj  Neural_Network_Library_Linux.vcxproj.filters  include  src
(+429 files in other folders)
