CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(Cpp_Python_RPC VERSION 1.0.0 DESCRIPTION "No description.")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
SET(CMAKE_SHARED_MODULE_PREFIX "")

# |STR| Python. |STR|
FIND_PACKAGE(PythonLibs 3.7 REQUIRED)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
# |END| Python. |END|

# |STR| Boost. |STR|
LINK_LIBRARIES(boost_python37)
# |END| Boost. |END|

# |STR| RPC. |STR|
SET(FIND_RPCLIB_PATHS /usr/local)

FIND_PATH(RPCLIB_INCLUDE_DIR
          PATH_SUFFIXES "include"
          NAMES "rpc/version.h"
          PATHS ${FIND_RPCLIB_PATHS})

INCLUDE_DIRECTORIES(${RPCLIB_INCLUDE_DIR})

FIND_LIBRARY(RPCLIB_LIBS
             NAMES librpc rpclib rpc
             PATHS ${FIND_RPCLIB_PATHS})

LINK_LIBRARIES(${RPCLIB_LIBS})
# |END| RPC. |END|

# |STR| Module. |STR|
INCLUDE_DIRECTORIES(include)

SET(SOURCE_FILES__SERVER
    src/Server/main.cpp
    src/Server/Manager.cpp)

SET(SOURCE_FILES__CLIENT
    src/Client/main.cpp
    src/Client/Manager.cpp)

PYTHON_ADD_MODULE(RPC_Server ${SOURCE_FILES__SERVER})
PYTHON_ADD_MODULE(RPC_Client ${SOURCE_FILES__CLIENT})
# |END| Module. |END|